# homeland-worksapce

./: README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml
backend/: .env  .gitignore  Cargo.toml
backend/docs/: diesel.md
backend/migrations/2024-03-14-090338_create_users/: up.sql
backend/src/: error.rs  logger.rs  main.rs  schema.rs
backend/src/app/router/: mod.rs
backend/src/server/: mod.rs
frontend/: next.config.mjs  package.json
frontend/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/src/app/auth/: layout.tsx
frontend/src/app/auth/login/: page.tsx
frontend/src/app/posts/: layout.tsx  page.tsx
frontend/src/app/posts/@posts/: page.tsx
frontend/src/app/posts/[slug]/: layout.tsx  page.tsx
frontend/src/app/posts/[slug]/@post/: page.tsx
