[workspace]
members = ["."]

[workspace.dependencies]
log = "0.4"
dotenvy = "0.15"

[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy ={ workspace = true }
diesel = { version = "2.1", features = ["postgres"] }
